@@ -19,64 +19,71 @@ like(
     'eval error - hostname is undefined (method)'
 );
 
+#=============
+# NOTE:
+#=============
+# 'Eevo5ang' is a randomly generated hostname used in these tests
+# as one user actually had a host called 'hostname' on their network
+# 'Ooquiida.com' is also a randomly generated domain name
+
 diag('Checking IPv4 type addresses') if ( $ENV{TEST_VERBOSE} );
-$host = App::ClusterSSH::Host->new( hostname => 'hostname' );
-is( $host,               'hostname', 'stringify works' );
-is( $host->get_hostname, 'hostname', 'hostname set' );
+$host = App::ClusterSSH::Host->new( hostname => 'Eevo5ang' );
+is( $host,               'Eevo5ang', 'stringify works' );
+is( $host->get_hostname, 'Eevo5ang', 'hostname set' );
 is( $host->get_port,     q{},        'checking set works' );
 is( $host->get_username, q{},        'username is unset' );
-is( $host->get_realname, 'hostname', 'realname set' );
+is( $host->get_realname, 'Eevo5ang', 'realname set' );
 is( $host->get_geometry, q{},        'geometry set' );
 is( $host->get_master,   q{},        'master set' );
 is( $host->get_type,     q{},        'type set' );
 
 $host->set_port(2323);
 
-is( $host,               'hostname', 'stringify works' );
-is( $host->get_hostname, 'hostname', 'checking set works' );
+is( $host,               'Eevo5ang', 'stringify works' );
+is( $host->get_hostname, 'Eevo5ang', 'checking set works' );
 is( $host->get_port,     2323,       'checking set works' );
 is( $host->get_username, q{},        'username is unset' );
-is( $host->get_realname, 'hostname', 'realname set' );
+is( $host->get_realname, 'Eevo5ang', 'realname set' );
 is( $host->get_geometry, q{},        'geometry set' );
 is( $host->get_master,   q{},        'master set' );
 is( $host->get_type,     q{},        'type set' );
 
 $host->set_username('username');
 
-is( $host->get_hostname, 'hostname', 'checking set works' );
+is( $host->get_hostname, 'Eevo5ang', 'checking set works' );
 is( $host->get_port,     2323,       'checking set works' );
 is( $host->get_username, 'username', 'username is unset' );
-is( $host->get_realname, 'hostname', 'realname set' );
+is( $host->get_realname, 'Eevo5ang', 'realname set' );
 is( $host->get_geometry, q{},        'geometry set' );
 is( $host->get_master,   q{},        'master set' );
 is( $host->get_type,     q{},        'type set' );
 
 $host->set_geometry('100x50+100+100');
 
-is( $host->get_hostname, 'hostname',       'checking set works' );
+is( $host->get_hostname, 'Eevo5ang',       'checking set works' );
 is( $host->get_port,     2323,             'checking set works' );
 is( $host->get_username, 'username',       'username is unset' );
-is( $host->get_realname, 'hostname',       'realname set' );
+is( $host->get_realname, 'Eevo5ang',       'realname set' );
 is( $host->get_geometry, '100x50+100+100', 'geometry set' );
 is( $host->get_master,   q{},              'master set' );
 is( $host->get_type,     q{},              'type set' );
 
 $host->set_master('some_host');
 
-is( $host->get_hostname, 'hostname',       'checking set works' );
+is( $host->get_hostname, 'Eevo5ang',       'checking set works' );
 is( $host->get_port,     2323,             'checking set works' );
 is( $host->get_username, 'username',       'username is unset' );
-is( $host->get_realname, 'hostname',       'realname set' );
+is( $host->get_realname, 'Eevo5ang',       'realname set' );
 is( $host->get_geometry, '100x50+100+100', 'geometry set' );
 is( $host->get_master,   'some_host',      'master set' );
 is( $host->get_type,     q{},              'type set' );
 
 $host->set_type('something');
 
-is( $host->get_hostname, 'hostname',       'checking set works' );
+is( $host->get_hostname, 'Eevo5ang',       'checking set works' );
 is( $host->get_port,     2323,             'checking set works' );
 is( $host->get_username, 'username',       'username is unset' );
-is( $host->get_realname, 'hostname',       'realname set' );
+is( $host->get_realname, 'Eevo5ang',       'realname set' );
 is( $host->get_geometry, '100x50+100+100', 'geometry set' );
 is( $host->get_master,   'some_host',      'master set' );
 is( $host->get_type,     'something',      'type set' );
@@ -85,182 +92,182 @@ $host = undef;
 is( $host, undef, 'starting afresh' );
 
 $host = App::ClusterSSH::Host->new(
-    hostname => 'hostname',
+    hostname => 'Eevo5ang',
     port     => 2323,
 );
 isa_ok( $host, "App::ClusterSSH::Host" );
 
-is( $host,               'hostname', 'stringify works' );
-is( $host->get_hostname, 'hostname', 'hostname set' );
+is( $host,               'Eevo5ang', 'stringify works' );
+is( $host->get_hostname, 'Eevo5ang', 'hostname set' );
 is( $host->get_port,     2323,       'checking set works' );
 is( $host->get_username, q{},        'username is unset' );
-is( $host->get_realname, 'hostname', 'realname set' );
+is( $host->get_realname, 'Eevo5ang', 'realname set' );
 is( $host->get_geometry, q{},        'geometry set' );
 
 $host->set_username('username');
 
-is( $host->get_hostname, 'hostname', 'checking set works' );
+is( $host->get_hostname, 'Eevo5ang', 'checking set works' );
 is( $host->get_port,     2323,       'checking set works' );
 is( $host->get_username, 'username', 'username is unset' );
-is( $host->get_realname, 'hostname', 'realname set' );
+is( $host->get_realname, 'Eevo5ang', 'realname set' );
 is( $host->get_geometry, q{},        'geometry set' );
 
 $host = undef;
 is( $host, undef, 'starting afresh' );
 
 $host = App::ClusterSSH::Host->new(
-    hostname => 'hostname',
+    hostname => 'Eevo5ang',
     username => 'username',
 );
 isa_ok( $host, "App::ClusterSSH::Host" );
 
-is( $host,               'hostname', 'stringify works' );
-is( $host->get_hostname, 'hostname', 'hostname set' );
+is( $host,               'Eevo5ang', 'stringify works' );
+is( $host->get_hostname, 'Eevo5ang', 'hostname set' );
 is( $host->get_port,     q{},        'checking set works' );
 is( $host->get_username, 'username', 'username is set' );
-is( $host->get_realname, 'hostname', 'realname set' );
+is( $host->get_realname, 'Eevo5ang', 'realname set' );
 is( $host->get_geometry, q{},        'geometry set' );
 
 $host->set_port(2323);
 
-is( $host->get_hostname, 'hostname', 'checking set works' );
+is( $host->get_hostname, 'Eevo5ang', 'checking set works' );
 is( $host->get_port,     2323,       'checking set works' );
 is( $host->get_username, 'username', 'username is set' );
-is( $host->get_realname, 'hostname', 'realname set' );
+is( $host->get_realname, 'Eevo5ang', 'realname set' );
 is( $host->get_geometry, q{},        'geometry set' );
 
 $host = undef;
 is( $host, undef, 'starting afresh' );
 
 $host = App::ClusterSSH::Host->new(
-    hostname => 'hostname',
+    hostname => 'Eevo5ang',
     username => 'username',
     port     => 2323,
 
 );
 isa_ok( $host, "App::ClusterSSH::Host" );
 
-is( $host,               'hostname', 'stringify works' );
-is( $host->get_hostname, 'hostname', 'checking set works' );
+is( $host,               'Eevo5ang', 'stringify works' );
+is( $host->get_hostname, 'Eevo5ang', 'checking set works' );
 is( $host->get_port,     2323,       'checking set works' );
 is( $host->get_username, 'username', 'username is set' );
-is( $host->get_realname, 'hostname', 'realname set' );
+is( $host->get_realname, 'Eevo5ang', 'realname set' );
 is( $host->get_geometry, q{},        'geometry set' );
 
 $host = undef;
 is( $host, undef, 'starting afresh' );
 
 $host = App::ClusterSSH::Host->new(
-    hostname => 'hostname',
+    hostname => 'Eevo5ang',
     username => 'username',
     port     => 2323,
     geometry => '100x50+100+100',
 );
 isa_ok( $host, "App::ClusterSSH::Host" );
 
-is( $host,               'hostname',       'stringify works' );
-is( $host->get_hostname, 'hostname',       'checking set works' );
+is( $host,               'Eevo5ang',       'stringify works' );
+is( $host->get_hostname, 'Eevo5ang',       'checking set works' );
 is( $host->get_port,     2323,             'checking set works' );
 is( $host->get_username, 'username',       'username is set' );
-is( $host->get_realname, 'hostname',       'realname set' );
+is( $host->get_realname, 'Eevo5ang',       'realname set' );
 is( $host->get_geometry, '100x50+100+100', 'geometry set' );
 
 diag('Parsing tests') if ( $ENV{TEST_VERBOSE} );
 
 my %parse_tests = (
-    'hostname' => {
-        hostname => 'hostname',
+    'Eevo5ang' => {
+        hostname => 'Eevo5ang',
         port     => q{},
         username => q{},
-        realname => 'hostname',
+        realname => 'Eevo5ang',
         geometry => q{},
         type     => 'ipv4',
     },
-    'hostname.domain.com' => {
-        hostname => 'hostname.domain.com',
+    'Eevo5ang.Ooquiida.com' => {
+        hostname => 'Eevo5ang.Ooquiida.com',
         port     => q{},
         username => q{},
-        realname => 'hostname.domain.com',
+        realname => 'Eevo5ang.Ooquiida.com',
         geometry => q{},
         type     => 'ipv4',
     },
-    'hostname:2323' => {
-        hostname => 'hostname',
+    'Eevo5ang:2323' => {
+        hostname => 'Eevo5ang',
         port     => 2323,
         username => q{},
-        realname => 'hostname',
+        realname => 'Eevo5ang',
         geometry => q{},
         type     => 'ipv4',
     },
-    'hostname:3232=1x1+1+1' => {
-        hostname => 'hostname',
+    'Eevo5ang:3232=1x1+1+1' => {
+        hostname => 'Eevo5ang',
         port     => 3232,
         username => q{},
-        realname => 'hostname',
+        realname => 'Eevo5ang',
         geometry => '1x1+1+1',
         type     => 'ipv4',
     },
-    'hostname.domain.com:3232' => {
-        hostname => 'hostname.domain.com',
+    'Eevo5ang.Ooquiida.com:3232' => {
+        hostname => 'Eevo5ang.Ooquiida.com',
         port     => 3232,
         username => q{},
-        realname => 'hostname.domain.com',
+        realname => 'Eevo5ang.Ooquiida.com',
         geometry => q{},
         type     => 'ipv4',
     },
-    'hostname.domain.com:3232=1x1+1+1' => {
-        hostname => 'hostname.domain.com',
+    'Eevo5ang.Ooquiida.com:3232=1x1+1+1' => {
+        hostname => 'Eevo5ang.Ooquiida.com',
         port     => 3232,
         username => q{},
-        realname => 'hostname.domain.com',
+        realname => 'Eevo5ang.Ooquiida.com',
         geometry => '1x1+1+1',
         type     => 'ipv4',
     },
-    'user@hostname' => {
-        hostname => 'hostname',
+    'user@Eevo5ang' => {
+        hostname => 'Eevo5ang',
         port     => q{},
         username => 'user',
-        realname => 'hostname',
+        realname => 'Eevo5ang',
         geometry => q{},
         type     => 'ipv4',
     },
-    'user@hostname.domain.com' => {
-        hostname => 'hostname.domain.com',
+    'user@Eevo5ang.Ooquiida.com' => {
+        hostname => 'Eevo5ang.Ooquiida.com',
         port     => q{},
         username => 'user',
-        realname => 'hostname.domain.com',
+        realname => 'Eevo5ang.Ooquiida.com',
         geometry => q{},
         type     => 'ipv4',
     },
-    'user@hostname:2323' => {
-        hostname => 'hostname',
+    'user@Eevo5ang:2323' => {
+        hostname => 'Eevo5ang',
         port     => 2323,
         username => 'user',
-        realname => 'hostname',
+        realname => 'Eevo5ang',
         geometry => q{},
         type     => 'ipv4',
     },
-    'user@hostname:3232=1x1+1+1' => {
-        hostname => 'hostname',
+    'user@Eevo5ang:3232=1x1+1+1' => {
+        hostname => 'Eevo5ang',
         port     => 3232,
         username => 'user',
-        realname => 'hostname',
+        realname => 'Eevo5ang',
         geometry => '1x1+1+1',
         type     => 'ipv4',
     },
-    'user@hostname.domain.com:3232' => {
-        hostname => 'hostname.domain.com',
+    'user@Eevo5ang.Ooquiida.com:3232' => {
+        hostname => 'Eevo5ang.Ooquiida.com',
         port     => 3232,
         username => 'user',
-        realname => 'hostname.domain.com',
+        realname => 'Eevo5ang.Ooquiida.com',
         geometry => q{},
         type     => 'ipv4',
     },
-    'user@hostname.domain.com:3232=1x1+1+1' => {
-        hostname => 'hostname.domain.com',
+    'user@Eevo5ang.Ooquiida.com:3232=1x1+1+1' => {
+        hostname => 'Eevo5ang.Ooquiida.com',
         port     => 3232,
         username => 'user',
-        realname => 'hostname.domain.com',
+        realname => 'Eevo5ang.Ooquiida.com',
         geometry => '1x1+1+1',
         type     => 'ipv4',
     },
